# autodngconverter

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  LEAD_ESCALATIONS.md  LICENSE  MEMORY.md  NOTICE  PRD_RawImport_Pipeline_CppRewrite.md  README.md  api.go  betterembeds.lua  config.go  converter.go  db.go  dng_previewembed.cpp  docker-compose.cpp-e2e.yml  docker-compose.go-e2e.yml  docker-compose.yml  go.mod  main.go  metrics.go  pipeline.go  reconcile.go  worker.go
.github/workflows/: docker-image.yml
docs/: ORCHESTRATION.md
legacy/go/: README.go.md  converter.go  go.sum  main.go  reconcile.go  rotation.go  util.go
logs_79210334403/: 0_build.txt
migrations/: 0001_init.sql  0002_orientation.sql  0002_preview_edits.sql  0003_legacy_status.sql
scripts/: lead_debug.sh  publish.sh  test_seed.sql
src/: api.cpp  api.h  config.cpp  config.h  converter.cpp  converter.h  db.cpp  db.h  main.cpp  metrics.cpp  metrics.h  pipeline.cpp  pipeline.h  reconcile.cpp  reconcile.h  rotation.cpp  rotation.h  util.cpp  util.h  worker.cpp  worker.h
tools/: betterembeds.lua  dng_previewembed.cpp
tools/dbprobe/: main.go
